# quant

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  QMT_事件驱动量化交易_Demo_技术设计文档_v1.0.docx  README.md  docker-compose.postgres.yml  pyproject.toml  requirements-qmt36.txt  verification.md
configs/: app.yaml  app_backtest_kr.yaml  app_backtest_ma.yaml  live.local.example.yaml  live.yaml  paper.local.example.yaml  paper.verify.yaml  paper.yaml
scripts/: _backtest_summary.py  batch_backtest_kr.py  batch_keep_rank_mode.py  bootstrap_qmt.py  build_b1_rank_scores.py  demo_walkthrough.ps1  export_b1_daily_selection.py  install_migration_bundle.ps1  load_history.py  manage_history.py  package_migration_bundle.ps1  promote_strategy.py  qmt_bridge.py  reconcile_eod.py  run_api.py  run_backtest.py  run_backtest_ma.py  run_dashboard.py  run_live.py  run_paper.py  run_paper_timed.py  run_user_pattern_backtests.py  verify_migration.py
sql/: schema.sql
strategy/: B1-soft_改造方案.md  B1_B2_B3_交易策略文档.docx  B1_QLib_exit_model_plan_v3.md  B1_QLib_rank_plan.md  B1_最终版策略说明_v2.md  B1_最终版策略说明_v3.md  B1_最终版策略说明_v4.md  B1_最终版策略说明_v5.md  b1_sample.md  strategy.py  均线粘合放倍量突破策略回测文档.md  砖型图短线策略_可量化回测定义_v1.md  训练.md
tests/: test_b1_rank_pipeline.py  test_b1_strategy_logic.py  test_backtest_flow.py  test_brick_strategy_logic.py  test_config_loader.py  test_dashboard_payloads.py  test_first_alpha_strategy.py  test_joinquant_microcap_engine.py  test_joinquant_style_strategy.py  test_qmt_bridge_client.py  test_qmt_bridge_script.py  test_qmt_microcap_trading.py  test_qmt_quote_client.py  (+3 more)
(+113 files in other folders)
